# cca-profiler

./: .gitignore  .inspect_input.py  .inspect_output.py  =2.7  Assets.pptm  CCAP Knowledge Base 27.09.25.docx  CCAP Knowledge Base From Danny 23.09.25 v2.docx  CCAP Knowledge Base From Danny 23.09.25.docx  CCAP Knowledge Base with update..docx  CCIP Deterministic Batch Processor Final V1.txt  CCIP Deterministic Batch Processor Final V3.txt  CCIP Deterministic Batch Processor Final v2.txt  Communication & Culture Advantage (CCA) v1.txt  Dockerfile  ICON_SIZE_NORMALIZATION_FIX.md  README.md  SVG_COORDINATE_FIX_REPORT.md  SVG_ICON_AUDIT_REPORT.md  SYSTEM PROMPT (Part 1 of  2) — CCA.txt  app.py  audit_svg_icons.py  fix_svg_coordinates.py  normalize_svg_icons.py  normalize_svg_icons_v2.py  pyproject.toml  requirements.txt  run_ccip.py  test_name_extraction.py
.claude/: settings.local.json
.github/: copilot-instructions.md
ccip/: __init__.py  __main__.py  ccip_compose.py  ccip_embed.py  ccip_intake.py  ccip_radar.py  ccip_textbank.py  svg_icons_radar.py
ccip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_robust_name_email.py  test_smoke.py
